fixed some stuff that overlapped

--- a/milkstore/src/components/styles/searchbar.css
+++ b/milkstore/src/components/styles/searchbar.css
@@ -1,4 +1,4 @@
 .searchbar {
     margin-left: 250px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
